# server/api/restores/index.js
@@ -3,6 +3,7 @@ var controller = require('./restore.controller');
 
 var router = express.Router();
 
+router.get('/', controller.getResults);
 router.post('/', controller.runRestore);
 
 module.exports = router;
