# server/routes.js
@@ -2,8 +2,8 @@ module.exports = function(app) {
 
   app.use('/restores', require('./api/restores/index'));
   app.use('/schedules', require('./api/schedules/index'));
-  // app.use('/sshKeys', require('./api/sshKeys/index'));
-  // app.use('/gpgKeys', require('./api/gpgKeys/index'));
+  app.use('/sshKeys', require('./api/sshKeys/index'));
+  app.use('/gpgKeys', require('./api/gpgKeys/index'));
 
   
   // All undefined asset or api routes should return a 404
